fix: add max-height + overflow auto to chat-section in thread

--- a/dabubble/src/app/thread/thread.component.scss
+++ b/dabubble/src/app/thread/thread.component.scss
@@ -136,6 +136,9 @@
   gap: 30px;
   padding: 10px 45px;
   position: relative;
+  max-height: 250px;
+  overflow: auto;
+
   &:hover {
     background-color: #eceefe;
     .chat-message.left {
